# PersonalProjects

./: .gitignore  index.html
.github/workflows/: deploy.yml
Arkemis/: PathFinding.py  SortComparison.py
Cernusco/: catalogo_cernusco.html
Dieta/: luglio.html
EO Notebook/: .config.yaml.kate-swp  README.md  config.yaml  pyproject.toml
EO Notebook/artifacts/: metadata.json  statistics.json
EO Notebook/notebooks/: eo_ingestion_access_dataset.ipynb
EO Notebook/notebooks/.ipynb_checkpoints/: eo_ingestion_access_dataset-checkpoint.ipynb
EO Notebook/reports/: qc_report.html  qc_report.md
EO Notebook/src/: dataloader.py  ingest_stac.py
Experiments/: .gitignore  .index.html.kate-swp  Gradient.html  ML.html  deepBlue.html  drone.html  index.html  tetris.html  zeta.html
IrrigatoreSmart/: .gitignore  BOM_Irrigazione_24VAC_DIY.xlsx  Checklist_Finale_Verifica.md  Codice_Arduino_Completo.ino  Costi_Progetto_Riepilogo.csv  DIY_Hunter_24VAC_SmartController_BOM.xlsx  Dashboard_Centro_Controllo.html  Guida_Tecnica.html  Guida_Tecnica_DIY.md  INDICE_GENERALE_DELIVERABLE.txt  index.html
MedStudent/: README.md  index.html
MedStudent/src/: main.js  styles.css
Presentazioni/: aboutme.html
Scacchi/: README.md  package-lock.json  package.json  vite.config.js
Scacchi/src/: App.css  App.jsx
Schacchi/: README.md  index.html  package-lock.json  package.json  vite.config.js
Schacchi/src/: index.css
SecretSanta/: .gitignore  README.md  game.js  index.html  styles.css
Slide Generator/: .gitignore  README.md  main.py  package.json  requirements-optional.txt  requirements.txt
Slide Generator/Asset/: layouts.json  prompt.md
Slide Generator/Materiale a supporto/: DatapizzaArchtect.md  DivEtImpera.md  datapizza-slides.skill
Slide Generator/Topic/: Arkemis_Kinetica.md  HybridDearch.md
Slide Generator/app/: __init__.py  gemini_assets.py  gemini_service.py  gemini_usage.py  (+9 more)
T2S con Mistral/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
T2S con Mistral/samples/: demo.md
T2S con Mistral/src/voxtral_terminal_backend/: __init__.py  cli.py  config.py  devices.py  markdown_pipeline.py  mistral_api.py  model_store.py  models.py  runtime.py  service.py  tts.py  voxtral.py
T2S con Mistral/tests/: test_markdown_pipeline.py  test_mistral_api.py  test_service.py  test_voxtral.py
assets/: index-BQ9E7xHg.css
chess-openings/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+21 files in other folders)
