[project]
name = "eo-notebook"
version = "0.1.0"
description = "EO ingestion, access patterns, and dataset engineering notebook environment"
requires-python = ">=3.11"
dependencies = [
  "dask[array]>=2024.8.0",
  "geopandas>=1.0.1",
  "ipykernel>=6.29.5",
  "jupyterlab>=4.2.5",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "planetary-computer>=1.0.0",
  "pyarrow>=17.0.0",
  "pyproj>=3.6.1",
  "pystac-client>=0.8.3",
  "pyyaml>=6.0.2",
  "rasterio>=1.3.11",
  "requests>=2.32.3",
  "rioxarray>=0.17.0",
  "shapely>=2.0.6",
  "stackstac>=0.5.1",
  "torch>=2.4.1",
  "xarray>=2024.7.0",
  "zarr>=2.18.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
